Scheduling für wachsende Taskmengen

--- a/doc/cmos.tex
+++ b/doc/cmos.tex
@@ -197,8 +197,9 @@ Ein eingebettetes System ist eine Hardware-/Software-Einheit, die innerhalb eine
 \subsection{Scheduling}
 Damit alle Tasks in einer geplanten und geordneten Reihenfolge ausgeführt werden können, gibt es den Scheduler, der den Schedule für alle Tasks plant. An diesen Schedule hält sich der Prozessor zur Bearbeitung aller Aufgaben, da erst so das Einhalten aller Deadlines \textit{garantiert} wird.
 
-Earliest Deadline First (EDF) ist eine Vorgehensweise zur Scheduleberechnung, bei der die Menge an Tasks vorher bekannt ist. Nach EDF wird die Menge an Tasks gierig nach Deadlines sortiert und entsprechend priorisiert. Je früher die Deadline einer Task ist, desto höher ist ihre Priorität und desto früher wird sie ausgeführt. Es kann passieren, dass während der Ausführung des Schedules eine Task blockiert, da sie auf eine Ressource warten muss. Die Idee von EDF$^+$ ist, dass Tasks, die blockieren, mit geringster Priorität bestraft werden und anschließend der EDF Schedulue so schnell wie möglich neu berechnet und dann ausgeführt wird.
+Earliest Deadline First (EDF) ist eine Vorgehensweise zur Scheduleberechnung, bei der die Menge an Tasks \textit{vorher bekannt} ist. Nach EDF wird die Menge an Tasks gierig nach Deadlines sortiert und entsprechend priorisiert. Je früher die Deadline einer Task ist, desto höher ist ihre Priorität und desto früher wird sie ausgeführt. Es kann passieren, dass während der Ausführung des Schedules eine Task blockiert, da sie auf eine Ressource warten muss. Die Idee von EDF$^+$ ist, dass Tasks, die blockieren, mit geringster Priorität bestraft werden und anschließend der EDF Schedulue so schnell wie möglich neu berechnet und dann ausgeführt wird.
 \begin{satz}
+	\label{satz:edf+}
 	EDF$^+$ ist optimal in der Garantieaussage über die gesamte Zeit, in der Tasks ausgeführt werden.
 \end{satz}
 \begin{proof}
@@ -230,6 +231,8 @@ Was kann dazu führen, dass eine Task während der Ausführung des Schedules blo
 \end{table}
 Tabelle \ref{tab:geometric-expectation} zeigt für jede Zeile in der rechten Spalte die erwartete Anzahl blockierter Tasks, wenn davon ausgegangen wird, dass 40 Tasks ausgeführt werden. Blockiert eine Task mit der Wahrscheinlichkeit $p = 0.05$, dann gibt es im Mittel 2 Tasks, die blockieren. Ist $n$ die Anzahl der Tasks, benötigt das Berechnen eines neuen Schedules nach EDF$^+$ mit Merge-Sort eine Laufzeit von $O(n \log(n))$. Da Merge-Sort nach dem optimalen Teile-und-Herrsche Prinzip die Tasks nach ihren Prioritäten sortiert, ist die Berechnung eines neuen Schedules nicht schneller möglich. 
 
+Die Garantieaussage von EDF$+$ in Satz \ref{satz:edf+} hält auch für \textit{wachsende Taskmengen}, wo Tasks während der Ausführung des Schedules zur Taskmenge hinzugefügt werden. Je nach Deadline der neuen Task wird sie dann in der spontanen Neuberechnung des Schedules berücksichtigt und ggf. sogar als erste Task ausgeführt und beendet.
+
 
 \section{Software Engineering}
 Software Engineering ist die Disziplin, bei der Ingenieure für das Softwareprodukt ihr Fachwissen so einbringen, dass alle Anforderungen an die Software unter möglichst allen Umstän-den erfüllt werden. Das heißt, zu jeder Zeit und unabhängig von ihrer Auslastung und Umgebung muss die Software alle Prozessanfragen aller Benutzer bearbeiten entsprechend der spezifizierten Anforderungen. Erst so wird den Benutzern mit der Software ermöglicht, Aufgaben und Abläufe zu bearbeiten. Wichtige Anforderungen an die Software sind z.B. die Benutzerfreundlichkeit, Zuverlässigkeit und Robustheit. Zur Benutzerfreundlichkeit zählen zum Beispiel einfache und intuitive Bedienung der Software und die Effizienz.
@@ -247,7 +250,7 @@ Im Anschluss wird die Complementary Metal-Oxide-Semiconductor (CMOS)-Technologie
 
 Weiterhin werden logische Gatter wie das NAND (NND) und NOR Gatter thematisiert. Ihre booleschen Funktionen werden in Wahrheitstabellen dargestellt. Es wird erläutert, dass diese Gatter als Hardwarelösungen in Prozessoren implementiert werden können, was eine schnellere Verarbeitung in einem Prozessor-Slot ermöglicht, im Gegensatz zur Ausführung durch Softwareprogramme. Die Abwägung zwischen Hardware- und Softwarelösungen für komplexere Funktionen, insbesondere im Kontext von Microcontrollern und eingebetteten Systemen, wird diskutiert.
 
-Ein separater Abschnitt widmet sich den eingebetteten Systemen, die als Hardware-/Software Einheiten Aufgaben in Echtzeit mit harten Deadlines ausführen. Das Scheduling von Tasks wird als essenzieller Bestandteil solcher Systeme hervorgehoben. Insbesondere wird das Earliest Deadline First (EDF)-Verfahren beschrieben und die Erweiterung EDF$^+$ vorgestellt, welche unter Berücksichtigung blockierender Tasks EDF optimal erweitert.
+Ein separater Abschnitt widmet sich den eingebetteten Systemen, die als Hardware-/Software Einheiten Aufgaben in Echtzeit mit harten Deadlines ausführen. Das Scheduling von Tasks wird als essenzieller Bestandteil solcher Systeme hervorgehoben. Besonders wird das Earliest Deadline First (EDF)-Verfahren beschrieben und die Erweiterung EDF$^+$ vorgestellt, welche unter Berücksichtigung blockierender Tasks EDF optimal erweitert. Die Garantieaussage von EDF$+$ hält auch für wachsende Taskmengen, wo Tasks während der Ausführung des Schedules zur Taskmenge hinzugefügt werden. Durch die spontane Neuberechnung macht es Sinn, zu untersuchen, in wie weit EDF$+$ auch für das Scheduling in Betriebssystem wie z.B. Linux verwendet werden kann. Harte Deadlines müssen auf jeden Fall eingehalten werden. Beim Überschreiten von weichen Deadlines degegen hat das Betriebssystem noch keine sicherheitskritische Grenze überschritten, die lebensbedrohliche Folgen für den Anwender und seine Umgebung hat. 
 
 Abschließend wird der Bereich des Software Engineerings beleuchtet. Es wird betont, dass ein standardisierter, agiler Entwicklungsprozess erforderlich ist, um Qualitätsanforderungen wie Benutzerfreundlichkeit, Zuverlässigkeit, Robustheit, Analysierbarkeit, Erweiterbarkeit und Wartbarkeit zu erfüllen. Die Bedeutung von kurzen Release-Zyklen, regelmäßigen Stand-Ups und einer spontanen Meeting-Kultur im agilen Kontext wird unterstrichen. Des Weiteren wird die Relevanz des V-Modells für die Qualitätssicherung auf allen Ebenen, insbesondere durch automatisierte Tests (Unit-, Integrations- und Benutzertests), herausgestellt. Ein spezifischer Ansatz, bei dem Integrationstests durch zyklomatische Komplexität getrieben werden, wird beschrieben, um Refactoring-Bedarfe zu identifizieren und die Code-Qualität kontinuierlich zu verbessern.
 
